[metadata]
name = meldutils
version = 1.0.2
author = Michael Hirsch, Ph.D.
author_email = scivision@users.noreply.github.com
description = Python utilities for Meld, good for managing templates across lots of repos / projects
url = https://github.com/scivision/meldutils
keywords =
  meld
  merge
  git
classifiers =
  Development Status :: 5 - Production/Stable
  Environment :: Console
  Intended Audience :: Developers
  Operating System :: OS Independent
  Programming Language :: Python :: 3
  Programming Language :: Python :: 3.6
  Programming Language :: Python :: 3.7
  Programming Language :: Python :: 3.8
  Topic :: Utilities
license_files =
  LICENSE.txt
long_description = file: README.md
long_description_content_type = text/markdown

[options]
python_requires = >= 3.6
packages = find:
scripts =
  meld_all.py
install_requires =

[options.extras_require]
tests =
  pytest
cov =
  pytest-cov
  coveralls
  flake8
  mypy
linguist =
  ghlinguist

[options.entry_points]
console_scripts =
  meld_all = meld_all:main
