[metadata]
name = meldutils
version = 2.0.0
author = Michael Hirsch, Ph.D.
author_email = scivision@users.noreply.github.com
description = Graphical recursive file diffing (Meld, VS Code), good for managing templates across lots of repos / projects
url = https://github.com/scivision/meldutils
keywords =
  meld
  merge
  git
  diff
classifiers =
  Development Status :: 5 - Production/Stable
  Environment :: Console
  Intended Audience :: Developers
  Operating System :: OS Independent
  Programming Language :: Python :: 3
  Programming Language :: Python :: 3.6
  Programming Language :: Python :: 3.7
  Programming Language :: Python :: 3.8
  Programming Language :: Python :: 3.9
  Topic :: Software Development :: Version Control
  Topic :: Text Processing
  Topic :: Utilities
license_files =
  LICENSE.txt
long_description = file: README.md
long_description_content_type = text/markdown

[options]
python_requires = >= 3.6
packages = find:
install_requires =
package_dir=
    =src

[options.packages.find]
where=src

[options.entry_points]
console_scripts =
  meld_all = meldutils.__main__:main

[options.extras_require]
tests =
  pytest
lint =
  flake8
  mypy
