[metadata]
name = meldutils
version = 2.1.0
author = Michael Hirsch, Ph.D.
author_email = scivision@users.noreply.github.com
description = Graphical recursive file diffing (Meld, VS Code), good for managing templates across lots of repos / projects
url = https://github.com/scivision/meldutils
keywords =
  meld
  merge
  git
  diff
classifiers =
  Development Status :: 5 - Production/Stable
  Environment :: Console
  Intended Audience :: Developers
  Operating System :: OS Independent
  Programming Language :: Python :: 3
  Topic :: Software Development :: Version Control
  Topic :: Text Processing
  Topic :: Utilities
license_files =
  LICENSE.txt
long_description = file: README.md
long_description_content_type = text/markdown

[options]
python_requires = >= 3.7
packages = find:
package_dir=
    =src

[options.packages.find]
where=src

[options.extras_require]
tests =
  pytest
lint =
  flake8
  mypy
